Add WYSIWYG editor and solve urllib3/requests dependency error
This commit includes the following:

1. Adds a WYSIWYG text editor using django-ckeditor.
2. Resolve urllib3 dependency error for the suitable version needed
to support requests.
3. Adds bleach to sanitize HTML

--- a/templates/messaging/_message_list.html
+++ b/templates/messaging/_message_list.html
@@ -7,7 +7,7 @@
         {% endif %}
     </h4>
 <blockquote>
-  {{ message.message|linebreaksbr }}
+  {{ message.message|safe }}
 </blockquote>
 {% endfor %} {% block pagination %} {% if is_paginated %}
 {% include 'messaging/_pagination.html' %}
