--- a/templates/messaging/recipient_mail.html
+++ b/templates/messaging/recipient_mail.html
@@ -19,7 +19,7 @@
 
 <p>Your Happiness Packet contains:</p>
 
-<p><em>{{ message.message|linebreaksbr }}</em></p>
+<p><em>{{ message.message|safe }}</em></p>
 
 <p>
     If you and the sender of the Happiness Packet both agree, we'd love to publish the message to our
