--- a/templates/messaging/sender_confirmation_mail.html
+++ b/templates/messaging/sender_confirmation_mail.html
@@ -12,7 +12,7 @@
     Your message reads:
 </p>
 
-<p><em>{{ message.message|linebreaksbr }}</em></p>
+<p><em>{{ message.message|safe }}</em></p>
 
 <p>
     To confirm and send your message, click or copy this link to a web browser:
