--- a/templates/messaging/message_send_form.html
+++ b/templates/messaging/message_send_form.html
@@ -3,6 +3,9 @@
 {% block extra_head %}<title>Send a Happiness Packet</title>{% endblock %}
 
 {% load crispy_forms_tags %}
+{% load static %}
+<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 
 {% block content %}
 
@@ -13,4 +16,11 @@
 {% crispy form %}
 
 <button id="search_fasid">Search</button>
+
+<script> 
+$("#submit-id-submit").click(function() {
+                $(".cke_wysiwyg_frame").contents().find("img")
+                    .css({"max-width": "100%", "height": "auto"});
+});
+</script>
 {% endblock content %}
