--- a/templates/messaging/received_messages.html
+++ b/templates/messaging/received_messages.html
@@ -20,7 +20,7 @@
         {% endif %}
     </h4>
     <blockquote>
-      {{ message.message|linebreaksbr }}
+      {{ message.message|safe }}
     </blockquote>
     {% endfor %}
 
