--- a/templates/messaging/sent_messages.html
+++ b/templates/messaging/sent_messages.html
@@ -17,7 +17,7 @@
             Sent to {{ message.recipient_name }}
     </h4>
     <blockquote>
-      {{ message.message|linebreaksbr }}
+      {{ message.message|safe }}
     </blockquote>
     {% endfor %}
 
