--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,10 @@
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/x-icon">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> -->
     <script src="{% static 'js/fas_details.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/vendor/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" async defer></script>
 
     <!--[if lt IE 8]>
         <link href="{% static 'css/bootstrap-ie7.css' %}" rel="stylesheet">
@@ -30,20 +32,27 @@
             <a href="{{ url }}"><img src="{% static 'images/logo.png' %}" alt="Open-Source Happiness Packets" class="logo"/></a>
             <ul class="nav nav-stacked">
                 {% if user.is_authenticated %}
-                    <h3> {{ user.username }}</h3>
-                    {% url 'messaging:send' as url %}
-                    <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Send some happiness!</a></li>
-                    {% url 'messaging:received_messages' as url %}
-                    <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">My Received Packets</a></li>
-                    {% url 'messaging:sent_messages' as url %}
-                    <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">My Sent Packets</a></li>
-                  <form id="logout" action="{% url 'oidc_logout' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-logout">
-                    <span class="glyphicon glyphicon-log-out"></span>
-                    <span>&nbsp;Logout</span>
-                    </button>
-                  </form>
+
+                <li class="dropdown">
+                    <h3 class="username dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ user.username }}
+                        <img class="arrow-expanding" src="/static/images/arrow-white.png" alt="side menu expanding icon">
+                    </h3>
+                    <ul class="dropdown-menu">
+                        {% url 'messaging:received_messages' as url %}
+                        <li><a class="dropdown-item" href="{{ url }}">My Received Packets</a></li>
+                        {% url 'messaging:sent_messages' as url %}
+                        <li><a class="dropdown-item" href="{{ url }}">My Sent Packets</a></li>
+
+                        <form id="logout" action="{% url 'oidc_logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-logout">
+                                <span class="glyphicon glyphicon-log-out"></span>
+                                <span>&nbsp;Logout</span>
+                            </button>
+                        </form>
+                    </ul>
+                  </li>
                 {% else %}
                     <form id="login" action="{% url 'oidc_authentication_init' %}" method="get">
                         <button type="submit" class="btn btn-login">
@@ -57,10 +66,8 @@
                 {% else %}
                     <li><a class="total-packets">Total Happiness Spread: <b>{{ packets_sent }} 🎉</b></a></li>
                 {% endif %}
-                {% if not user.is_authenticated %}
-                  {% url 'messaging:send' as url %}
-                  <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Send some happiness!</a></li>
-                {% endif %}
+                {% url 'messaging:send' as url %}
+                <li role="presentation" {% if url in request.path %}class="active"{% endif %}><a href="{{ url }}">Send some happiness!</a></li>
                 {% url 'messaging:start' as url %}
                 <li role="presentation" {% ifequal request.path url %}class="active"{% endifequal %}><a href="{{ url }}">What are Happiness Packets?</a></li>
                 {% url 'messaging:inspiration' as url %}
