--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
                   <hr>
                   {% block footer %}
                   {% include "follow.html" %}
-                  <div class="footer-msg">
+                  <div class="footer-msg" style="padding-top: 1rem;">
                     {% endblock %}
                     Fedora Happiness Packets is a fork of <a href="https://github.com/mxsasha/happinesspackets/">Happiness Packets</a> and part of GSoC 2018.
                     <br>
