--- a/templates/messaging/inspiration.html
+++ b/templates/messaging/inspiration.html
@@ -6,7 +6,7 @@
         <h2>Get inspired!</h2>
     </div>
 
-    <em>
+    <em style="font-size: 1.5em; line-height: 1.8em;">
         Want to send some happiness but having a writer's block? Check out some of these sample messages
         for inspiration. These are not actual messages that were sent with the system, just some ideas that
         you can use. Our <a href="{% url 'messaging:archive' %}">Happiness Archive</a> contains more messages from
