--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -4,7 +4,7 @@
 <h2>Search</h2>
 <form method="get"  class="form-inline">
     {% for field in form %}
-    <div class="form-group">
+    <div class="form-group" style="font-size: 1.7em;">
         {{ field.errors }}
         {{ field.label_tag }} {{ field }}
     </div>
