templates: Consistent formatting/naming across pages after PR #185

--- a/templates/messaging/faq.html
+++ b/templates/messaging/faq.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block extra_head %}<title>FAQ-(Frequently Asked Questions)</title>{% endblock %}
+{% block extra_head %}<title>Frequently Asked Questions</title>{% endblock %}
 
 {% block content %}
 <div id="faq">
     <div class="page-header">
-        <h2>FAQ-(Frequently Asked Questions)</h2>
+        <h2>Frequently Asked Questions</h2>
     </div>
 
     <h3>Who made this and why?</h3>
