--- a/templates/messaging/message_send_form.html
+++ b/templates/messaging/message_send_form.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block extra_head %}<title>Send happiness packet</title>{% endblock %}
+{% block extra_head %}<title>Send a Happiness Packet</title>{% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
 
     <div class="page-header">
-        <h2>Send a happiness packet to someone!</h2>
+        <h2>Send a Happiness Packet to someone!</h2>
         <br>
     </div>
 
