Add access to message confirmation link only to sender
This commit adds the following functionality:
1. User needs to be logged in to access confirmation link.
2. Only the sender of the message can successfully confirm it.
3. A alert message is displayed when a user that isn't identified
as the sender of the message accesses the confirmation link.

--- a/templates/messaging/message_sender_confirmation_failed.html
+++ b/templates/messaging/message_sender_confirmation_failed.html
@@ -10,6 +10,10 @@
         <div class="alert alert-danger">
             We couldn't find this message. Make sure that the URL is complete.
         </div>
+    {% elif not_sender %}
+        <div class="alert alert-danger">
+            The message can't be confirmed since you aren't the sender of the message.
+        </div>
     {% elif already_confirmed %}
         <div class="alert alert-info">
             You already confirmed this message.
