--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -26,7 +26,7 @@
 </h4>
 
 <blockquote>
-    {{ result.object.message|linebreaksbr  }}
+    {{ result.object.message|safe }}
 </blockquote>
 
 {% empty %}
