Update Code of Conduct information to Fedora Code of Conduct

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
                     {% endblock %}
                     Fedora Happiness Packets is a fork of <a href="https://github.com/mxsasha/happinesspackets/">Happiness Packets</a> and part of GSoC 2018.
                     <br>
-                    Need help? <a href="mailto:fedora.happinesspackets@gmail.com">fedora.happinesspackets@gmail.com</a>
+                    Need help? Report an issue <a href="https://pagure.io/coc">here</a>.
                     <img class="emoji" src="{% static 'images/emoji/loveletter.png' %}" alt="💌" title="Love letter" aria-label="Emoji: Love letter" style="vertical-align: text-bottom">
                     <br>
                     Got feedback? File an issue <a href="https://pagure.io/fedora-commops/fedora-happiness-packets/new_issue">here</a>
