--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -19,7 +19,7 @@
                 Open-source happiness packets is an
                 <a href="https://github.com/erikr/happinesspackets/" style="color: #3c6eb4;">open-source project</a>
                 <br>
-                Need help? <a href="mailto:fedora.happinesspackets@gmail.com" style="color: #3c6eb4;">fedora.happinesspackets@gmail.com</a>
+                Need help? Report an issue <a href="https://pagure.io/coc" style="color: #3c6eb4;">here</a>.
             </p>
             <p>
                 Never want to receive email from us again?<br>
