--- a/templates/messaging/faq.html
+++ b/templates/messaging/faq.html
@@ -32,12 +32,12 @@
     <h3>Can I send anything I want?</h3>
     <p>
         We don't screen the content of messages. However, all messages must meet the
-        <a href="https://www.djangoproject.com/conduct/">Django Project Code of Conduct</a>.
+        <a href="https://docs.fedoraproject.org/en-US/project/code-of-conduct/">Fedora Code of Conduct</a>.
         Notably, harassment, insults and other exclusionary behavior are never acceptable.
     </p>
     <p>
         Violations of this can result in blocking you from using the service. Your message might also be shared with
-        the Django Code of Conduct committee, who reserve the right to take further action of their own. If you're a member
+        the Fedora Code of Conduct committee, who reserve the right to take further action of their own. If you're a member
         of another open-source community, your message might be shared with any code of conduct committee or similar group
         from that community.
     </p>
@@ -79,8 +79,8 @@
 
     <h3>I received an abusive message, what should I do?</h3>
     <p>
-        Please report this to <a href="mailto:info@happinesspackets.io">info@happinesspackets.io</a>, preferably by
-        forwarding the original email that contains the message.
+        Please see the <a href="https://docs.fedoraproject.org/en-US/project/code-of-conduct/">Fedora Code of Conduct</a> 
+        to find the steps to report it to the Project.
     </p>
 
     <h3>I don't want to receive any email from you</h3>
