--- a/templates/messaging/message_send_form.html
+++ b/templates/messaging/message_send_form.html
@@ -15,7 +15,7 @@
 </div>
 {% crispy form %}
 
-<button id="search_fasid">Search</button>
+<button id="search_fasid" class="search">Search</button>
 
 <script> 
 $("#submit-id-submit").click(function() {
