--- a/templates/messaging/start.html
+++ b/templates/messaging/start.html
@@ -43,10 +43,15 @@
         If both the sender and the recipient agree, we can
         <a href="{% url 'messaging:archive' %}">publish the Happiness Packet</a> on the website.
         We hope to build an archive of open-source happiness that communities can draw inspiration from.
-    </p><p>
-        As an example, here are two random messages from our archive:
     </p>
 
     {% include 'messaging/_message_list.html' %}
+    <div class="total_happiness_sent">
+        {% if packets_sent == 0 %}
+        <a class="total-packets">Total Happiness Spread: <b>{{ packets_sent }} 💔</b></a>
+        {% else %}
+        <a class="total-packets">Total Happiness Spread: <b>{{ packets_sent }} 🎉</b></a>
+        {% endif %}
+    </div>
     
 {% endblock content %}
