--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -11,7 +11,7 @@
         {{ field.label_tag }} {{ field }}
     </div>
     {% endfor %}
-    <input type="submit" value="Search">
+    <input type="submit" value="Search" class="search">
 </form>
 {% if query %}
 <h3>Results</h3>
